syntax = "proto3";

package src;

option go_package = "emailService/proto";

service EmailService {
  rpc SendPasswordCode(PasswordCodeReq) returns (PasswordCodeRes) {}
  rpc SendSupportMessage(SupportMessageReq) returns (SupportMessageRes) {}
}

message PasswordCodeReq {
  string email = 1;
  string code = 2;
}

message PasswordCodeRes {}

message SupportMessageReq {
  string message = 1;
}

message SupportMessageRes {}